fixes zhaogeng when overflow > 100vh

--- a/pwa/src/app/app.component.scss
+++ b/pwa/src/app/app.component.scss
@@ -30,8 +30,14 @@ div { flex: 1 1 0; }
 }
 
 .app-container {
+    display: flex;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    transition: background-color 0.5s ease;
+}
+
+.app-container.unicorn-dark-theme {
+    background: #303030;
 }
 
 .app-outlet.unicorn-dark-theme {
